--- a/osa7/bloglist-frontend/package.json
+++ b/osa7/bloglist-frontend/package.json
@@ -8,6 +8,7 @@
     "eslint-plugin-jest": "^23.8.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
